...
    }
}

extension DetailViewController {
    private func setupUI() {
        let backButton = UIBarButtonItem()
        backButton.title = "Back"
        self.navigationController?.navigationBar.topItem?.backBarButtonItem = backButton
        
        self.view.backgroundColor = .white
        self.view.addSubview(titleLbl)
        self.view.addSubview(detailLbl)
        
...
