...

    let addItemButton: UIButton = {
        let tmp = UIButton()
        let addImage = UIImage(systemName: "plus")?.withRenderingMode(.alwaysTemplate)
        tmp.setImage(addImage, for: .normal)
        tmp.setTitle("Add", for: .normal)
        tmp.accessibilityIdentifier = "AddBtn"
        var configuration = UIButton.Configuration.plain()
        configuration.baseBackgroundColor = .systemBlue
        tmp.configuration = configuration
        return tmp
    }()

...
